hashicorp_vault/vault-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name:  vault
            port:
              number: 8200
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - example.com
    secretName: example-ssl
